parent-child relationship

--- a/labs/ourfirstexample/index.html
+++ b/labs/ourfirstexample/index.html
@@ -13,7 +13,32 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        hello
+        <h1>Welcome !</h1>
+        <h1>Hello World!</h1>
+        <div classs="picholder">
+            <img src = "" alt="">
+            <h2>
+
+            </h2>
+
+            <p class="example"> Tthis is a text/</p>;
+             <!-- Wireframing -->
+             <!-- Section one -->
+             <div class="parent" -->
+                PARENT
+             <div class="son" SON> </div>
+             <div> </div>
+             <!-- Section three -->
+             <div> </div>
+             <!-- Section four -->
+             <div> </div>
+             <!-- Section give -->
+             <div> </div>
+             <!-- Section six -->
+             <div> </div>
+
+        </div>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
